presentation and support materials

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+data/09267211aca3c929d4a62cefca44055c
+
+data/1feb746a5070c8bc2b1d854c909671c0
+
+data/651c07f8fa0b9f80d42734b3a27b67e3
